tektoncd/manifest/greeting-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting-app
  labels:
    app: greeting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeting-app
  template:
    metadata:
      labels:
        app: greeting-app
    spec:
      containers:
        - name: greeting-app
          image: localhost:32000/play-demo/greeting-app:latest
          ports:
            - containerPort: 9000
