tektoncd/manifest/greeting-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-app
spec:
  selector:
    app: greeting-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
