tektoncd/manifest/greeting-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: play-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: play-app.192.168.23.31.nip.io
    http:
      paths:
        - path: /
          backend:
            serviceName: greeting-app 
            servicePort: 9000
